# Linguagem_C_CPP

./: CMakeLists.txt  README.md
Guess/: CMakeLists.txt  a.out  guess.c  loopInf.c
Pinheiro-ELPRC/: CMakeLists.txt  emTest.c  exemple.c  teste.c
Pinheiro-ELPRC/Cap02/: calcula.c  ent_sai.c  eq_quad2.c  exemplo2.07.c  exemplo2.08.c  exemplo2.09.c  exemplo2.10.c  exemplo2.11.c  exemplo2.12.c  exemplo2.13.c  exemplo2.14.c  exemplo2.15Calculus.c  exemplo2.15InOutData.c  exemplo2.15MainProgram.c  exercise02.12.c  exercise02.13.c  exercise02.15.c  helloworld.c  pinheiro015ex2.6.c  pinheiro016ex2.7.c  pinheiro018ex2.10.c  pinheiro018ex2.9.c  pinheiro019ex2.11.c  pinheiro020ex2.12.c  pinheiro022ex2.13.c  pinheiro023.c  primeiro.c  prinheiro017ex2.8.c
Pinheiro-ELPRC/Cap02/arquivoslib/: calcula.c  calcula.h  ent_sai.c  ent_sai.h  eq_quad2  eq_quad2.c
Pinheiro-ELPRC/Cap03/: exemplo03.05.c  exemplo03.07.c  exemplo03.09.c  exemplo03.20.c  exemplo03.28.c  exemplo03.29.c  exemplo03.30.c  exemplo03.31.c  exemplo03.32.c  exemplo03.33.c  exemplo03.34.c  exemplo03.35.c  exemplo03.37  exemplo03.37.c  exemplo03.38  exemplo03.38.c
Pinheiro-ELPRC/Cap04/: exemplo04.02.c  exemplo04.08.c  exemplo04.09.c  exemplo04.10.c  exemplo04.11.c  exemplo04.12.c  exemplo04.13.c  exemplo04.14.c  exemplo04.15.c  exemplo04.22.c  exemplo04.23.c  exemplo04.24.c  exemplo04.25A.c  exemplo04.25B.c  exemplo04.25C.c  exemplo04.26.c
Pinheiro-ELPRC/Cap05/: exemplo05.04.c  exemplo05.05.c  exemplo05.06.c  exemplo05.19.c  exemplo05.20.c  exemplo05.21A.c  exemplo05.21B.c  exemplo05.21C.c  exemplo05.22.c  exemplo05.220.c  exemplo05.23.c  walescko.c
Pinheiro-ELPRC/Cap06/: exemplo06.01.c  exemplo06.02.c  exemplo06.03.c  exemplo06.04.c  exemplo06.05.c  exemplo06.06.c  exemplo06.07.c  exemplo06.08.c  exemplo06.09.c  exemplo06.10.c  exemplo06.11  exemplo06.11.c  exemplo06.12.c  exemplo06.14.c  exemplo06.16.c  exemplo06.19.c  exemplo06.21.c  exemplo06.23.c  exemplo06.24.c  exemplo06.25.c  exemplo06.27.c  walescko.h
Pinheiro-ELPRC/Cap07/: Exercicios  a.out  exemplo07.01.c  exemplo07.02.c  exemplo07.03.c  exemplo07.04.c  exemplo07.05.c  exemplo07.06.c  exemplo07.07.c  exemplo07.08.c  exemplo07.10.c  exemplo07.11.c  exemplo07.12.c  exemplo07.13.c  exercicio07.04.c  exercicio07.06.c  exercicio07.07.c
Pinheiro-ELPRC/Cap08/: a.out  exemplo08.01.c  exemplo08.02.c  exemplo08.03.c  exemplo08.04.c  exemplo08.05.c  exemplo08.06.c  exemplo08.07.c  exemplo08.08.c  exemplo08.09.c  exemplo08.10.c  exemplo08.13.c  exemplo08.14.c
Pinheiro-ELPRC/Cap09/: exemplo09.04.c  exemplo09.05.c  exemplo09.06.c
Udemy_C_CPP/section1-2/: aprenderCpp  aprenderCpp.cpp  apresentacao.cpp
programas/: hello.cpp  hello2.cpp  numero.cpp  operadores.cc  somasimples.cpp
