cmake_minimum_required(VERSION 3.22)
project(Linguagem_C_CPP)

set(CMAKE_CXX_STANDARD 14)

include_directories(Pinheiro-ELPRC/Cap02/arquivoslib)
include_directories(Pinheiro-ELPRC/Cap04)
include_directories(Pinheiro-ELPRC/Cap05)
include_directories(Pinheiro-ELPRC/Cap06)

add_executable(Linguagem_C_CPP
        Pinheiro-ELPRC/Cap02/arquivoslib/calcula.c
        Pinheiro-ELPRC/Cap02/arquivoslib/calcula.h
        Pinheiro-ELPRC/Cap02/arquivoslib/ent_sai.c
        Pinheiro-ELPRC/Cap02/arquivoslib/ent_sai.h
        Pinheiro-ELPRC/Cap02/arquivoslib/eq_quad2.c
        Pinheiro-ELPRC/Cap02/baskara.c
        Pinheiro-ELPRC/Cap02/calcula.c
        Pinheiro-ELPRC/Cap02/ent_sai.c
        Pinheiro-ELPRC/Cap02/eq_quad2.c
        Pinheiro-ELPRC/Cap02/exemplo2.07.c
        Pinheiro-ELPRC/Cap02/exemplo2.08.c
        Pinheiro-ELPRC/Cap02/exemplo2.09.c
        Pinheiro-ELPRC/Cap02/exemplo2.10.c
        Pinheiro-ELPRC/Cap02/exemplo2.11.c
        Pinheiro-ELPRC/Cap02/exemplo2.12.c
        Pinheiro-ELPRC/Cap02/exemplo2.13.c
        Pinheiro-ELPRC/Cap02/exemplo2.14.c
        Pinheiro-ELPRC/Cap02/exemplo2.15Calculus.c
        Pinheiro-ELPRC/Cap02/exemplo2.15InOutData.c
        Pinheiro-ELPRC/Cap02/exemplo2.15MainProgram.c
        Pinheiro-ELPRC/Cap02/exercise02.12.c
        Pinheiro-ELPRC/Cap02/exercise02.13.c
        Pinheiro-ELPRC/Cap02/exercise02.15.c
        Pinheiro-ELPRC/Cap02/primeiro.c
        Pinheiro-ELPRC/Cap03/exemplo03.05.c
        Pinheiro-ELPRC/Cap03/exemplo03.07.c
        Pinheiro-ELPRC/Cap03/exemplo03.09.c
        Pinheiro-ELPRC/Cap03/exemplo03.20.c
        Pinheiro-ELPRC/Cap03/exemplo03.28.c
        Pinheiro-ELPRC/Cap03/exemplo03.29.c
        Pinheiro-ELPRC/Cap03/exemplo03.30.c
        Pinheiro-ELPRC/Cap03/exemplo03.31.c
        Pinheiro-ELPRC/Cap03/exemplo03.32.c
        Pinheiro-ELPRC/Cap03/exemplo03.33.c
        Pinheiro-ELPRC/Cap03/exemplo03.34.c
        Pinheiro-ELPRC/Cap03/exemplo03.35.c
        Pinheiro-ELPRC/Cap03/exemplo03.37.c
        Pinheiro-ELPRC/Cap03/exemplo03.38.c
        Pinheiro-ELPRC/Cap04/exemplo04.02.c
        Pinheiro-ELPRC/Cap04/exemplo04.08.c
        Pinheiro-ELPRC/Cap04/exemplo04.09.c
        Pinheiro-ELPRC/Cap04/exemplo04.10.c
        Pinheiro-ELPRC/Cap04/exemplo04.11.c
        Pinheiro-ELPRC/Cap04/exemplo04.12.c
        Pinheiro-ELPRC/Cap04/exemplo04.13.c
        Pinheiro-ELPRC/Cap04/exemplo04.14.c
        Pinheiro-ELPRC/Cap04/exemplo04.15.c
        Pinheiro-ELPRC/Cap04/exemplo04.21.c
        Pinheiro-ELPRC/Cap04/exemplo04.22.c
        Pinheiro-ELPRC/Cap04/exemplo04.23.c
        Pinheiro-ELPRC/Cap04/exemplo04.24.c
        Pinheiro-ELPRC/Cap04/exemplo04.25A.c
        Pinheiro-ELPRC/Cap04/exemplo04.25B.c
        Pinheiro-ELPRC/Cap04/exemplo04.25C.c
        Pinheiro-ELPRC/Cap04/exemplo04.26.c
        Pinheiro-ELPRC/Cap04/walescko.c
        Pinheiro-ELPRC/Cap04/walescko.h
        Pinheiro-ELPRC/Cap05/exemplo05.04.c
        Pinheiro-ELPRC/Cap05/exemplo05.05.c
        Pinheiro-ELPRC/Cap05/exemplo05.06.c
        Pinheiro-ELPRC/Cap05/exemplo05.19.c
        Pinheiro-ELPRC/Cap05/exemplo05.20.c
        Pinheiro-ELPRC/Cap05/exemplo05.21A.c
        Pinheiro-ELPRC/Cap05/exemplo05.21B.c
        Pinheiro-ELPRC/Cap05/exemplo05.21C.c
        Pinheiro-ELPRC/Cap05/exemplo05.22.c
        Pinheiro-ELPRC/Cap05/exemplo05.23.c
        Pinheiro-ELPRC/Cap05/exemplo06.06.c
        Pinheiro-ELPRC/Cap05/walescko.c
        Pinheiro-ELPRC/Cap05/walescko.h
        Pinheiro-ELPRC/Cap06/exemplo06.01.c
        Pinheiro-ELPRC/Cap06/exemplo06.02.c
        Pinheiro-ELPRC/Cap06/exemplo06.03.c
        Pinheiro-ELPRC/Cap06/exemplo06.04.c
        Pinheiro-ELPRC/Cap06/exemplo06.05.c
        Pinheiro-ELPRC/Cap06/exemplo06.06.c
        Pinheiro-ELPRC/Cap06/exemplo06.07.c
        Pinheiro-ELPRC/Cap06/exemplo06.08.c
        Pinheiro-ELPRC/Cap06/exemplo06.09.c
        Pinheiro-ELPRC/Cap06/exemplo06.10.c
        Pinheiro-ELPRC/Cap06/exemplo06.11.c
        Pinheiro-ELPRC/Cap06/exemplo06.12.c
        Pinheiro-ELPRC/Cap06/exemplo06.14.c
        Pinheiro-ELPRC/Cap06/exemplo06.16.c
        Pinheiro-ELPRC/Cap06/exemplo06.19.c
        Pinheiro-ELPRC/Cap06/exemplo06.21.c
        Pinheiro-ELPRC/Cap06/exemplo06.23.c
        Pinheiro-ELPRC/Cap06/exemplo06.24.c
        Pinheiro-ELPRC/Cap06/exemplo06.25.c
        Pinheiro-ELPRC/Cap06/exemplo06.27.c
        Pinheiro-ELPRC/Cap06/walescko.c
        Pinheiro-ELPRC/Cap06/walescko.h
        Pinheiro-ELPRC/exemple.c
        Pinheiro-ELPRC/teste.c
        programas/hello.cpp
        programas/hello2.cpp
        programas/numero.cpp
        programas/operadores.cc
        programas/operadores.cpp
        programas/somasimples.cpp
        Udemy_C_CPP/section1-2/aprenderCpp.cpp
        Udemy_C_CPP/section1-2/apresentacao.cpp)
